<resources>
    <string name="app_name">Freekick</string>
    <string name="facebook_app_id">1964664193746214</string>
    <string name="fb_login_protocol_scheme">fb1964664193746214</string>
    <string name="test">&#xe643;</string>
    <string name="user_icon">&#xe62a;</string>
    <string name="phone_icon">&#xe618;</string>
    <string name="back">&#xe604;</string>
    <string name="icon_upload_pic">&#xe6ba;</string>
    <string name="icon_change">&#xe6c3;</string>
    <string name="icon_invite">&#xe643;</string>
    <string name="icon_share">&#xe715;</string>
    <string name="icon_note">&#xe61c;</string>
    <string name="icon_match">&#xe614;</string>
    <string name="icon_invite_people">&#xe609;</string>
    <string name="icon_phone">&#xe618;</string>
    <string name="icon_triangle_big">&#xe629;</string>
    <string name="icon_lines">&#xe68b;</string>
    <string name="icon_share_bold">&#xe628;</string>
    <string name="icon_error_oval">&#xe655;</string>
    <string name="icon_record">&#xe661;</string>
    <string name="icon_error">&#xe63e;</string>
    <string name="icon_location">&#xe60a;</string>
    <string name="icon_setting">&#xe606;</string>
    <string name="icon_more">&#xe61d;</string>
    <string name="icon_filtrate">&#xe607;</string>
    <string name="icon_normal">&#xe615;</string>
    <string name="icon_set_location">&#xe6b0;</string>
    <string name="icon_back_right">&#xe62b;</string>
    <string name="icon_voice">&#xe603;</string>
    <string name="icon_notice">&#xe699;</string>
    <string name="icon_bell">&#xe60d;</string>
    <string name="icon_left_big">&#xe604;</string>
    <string name="icon_right_big">&#xe633;</string>
    <string name="icon_day">&#xe608;</string>
    <string name="icon_friend">&#xe64a;</string>
    <string name="icon_search">&#xe600;</string>
    <string name="icon_down_small">&#xe77a;</string>
    <string name="icon_focus">&#xe63d;</string>
    <string name="icon_advice">&#xe61f;</string>
    <string name="icon_right_small">&#xe601;</string>
    <string name="icon_left_small">&#xe602;</string>
    <string name="testword">This is the test words</string>
    <string name="establish">Create Match</string>
    <string name="partake">Join Match</string>
    <string name="record">Records</string>
    <string name="mine">My Wall</string>
    <string name="set_up">Settings</string>
    <string name="choose_date">Choose date</string>
    <string name="set_language">Set Language</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tues</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thur</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="register_by_facebook">Login with FaceBook</string>
    <string name="register_by_email">Login with Email</string>
    <string name="user_name">Username</string>
    <string name="please_enter_your_name">Please enter your username</string>
    <string name="phone_number">Mobile</string>
    <string name="please_enter_your_phone">Please enter your phone number</string>
    <string name="go_on">Next</string>
    <string name="main_attack">Offensive</string>
    <string name="long_pass">Long pass</string>
    <string name="short_pass">Short pass</string>
    <string name="defensive">Defensive</string>
    <string name="for_fun">Non-competitive</string>
    <string name="become_strong">Competitive</string>
    <string name="team_logo">Team Logo</string>
    <string name="team_name">Team Name</string>
    <string name="please_enter_your_team_name">Please enter your team name</string>
    <string name="area">District</string>
    <string name="please_enter_your_team_area">Please enter your team district</string>
    <string name="confirm">Confirm</string>
    <string name="please_choose_your_district">Choose Your District</string>
    <string name="vs_hobby">Match Preference</string>
    <string name="choose_style">Choose style</string>
    <string name="select_the_year">Choose the Year</string>
    <string name="choose_the_picture">Choose the picture</string>
    <string name="local_album">Local album</string>
    <string name="by_camera">By Camera</string>
    <string name="cancel">Cancel</string>
    <string name="establish_time">Established Year</string>
    <string name="people_num">Number of Players</string>
    <string name="team_age">Age Range of Players</string>
    <string name="average_height">Average Height of Players</string>
    <string name="under_160cm">160cm or below</string>
    <string name="above_180cm">Above 180cm</string>
    <string name="team_style">Style</string>
    <string name="open">Create\nMatch</string>
    <string name="join">Join\nMatch</string>
    <string name="game_record">Record</string>
    <string name="my_page">My Wall</string>
    <string name="notification">Notifications</string>
    <string name="change_language">Language</string>
    <string name="clause">Terms and Conditions</string>
    <string name="support">Help and Support</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="to">to</string>
    <string name="from">From</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="pitch_size">Pitch Size</string>
    <string name="pitch_size_5">5-a-side pitch</string>
    <string name="pitch_size_7">7-a-side pitch</string>
    <string name="pitch_size_11">11-a-side pitch</string>
    <string name="person"></string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="loading">Loading..</string>
    <string name="please_choose_the_year_established">Please choose the year established</string>
    <string name="please_select_a_team_average_height">Please select a team average height</string>
    <string name="create_team_success">Create team success</string>
    <string name="match_invite">Match Invitations</string>
    <string name="invite">Invite</string>
    <string name="follow">Follow</string>
    <string name="unfollow">unfollow</string>
    <string name="please_choose_match_date">Please choose match date</string>
    <string name="please_choose_match_time">Please choose match time</string>
    <string name="please_choose_pitch">Please choose pitch</string>
    <string name="match_date">Match Date</string>
    <string name="match_time">Match Time</string>
    <string name="please_choose_the_district">Please choose the district</string>
    <string name="pitch_name">Name of Venue</string>
    <string name="expected_number_of_matches">Expected Number of Players</string>
    <string name="time_error">End time must be greater than the start time, please choose again!</string>
    <string name="text_area">{"regions":[{"region":"Hong$Kong","districts":[{"district":"Central$and$Western","district_id":"19"},{"district":"Eastern","district_id":"20"},{"district":"Southern","district_id":"21"},{"district":"Wan$Chai","district_id":"22"}]},{"region":"Kowloon","districts":[{"district":"Kowloon$City","district_id":"23"},{"district":"Kwun$Tong","district_id":"24"},{"district":"Sham$Shui$Po","district_id":"25"},{"district":"Wong$Tai$Sin","district_id":"26"},{"district":"Yau$Tsim$Mong","district_id":"27"}]},{"region":"New$Territories","districts":[{"district":"Islands","district_id":"28"},{"district":"Kwai$Tsing","district_id":"29"},{"district":"North","district_id":"30"},{"district":"Sai$Kung","district_id":"31"},{"district":"Sha$Tin","district_id":"32"},{"district":"Tai$Po","district_id":"33"},{"district":"Tsuen$Wan","district_id":"34"},{"district":"Tuen$Mun","district_id":"35"},{"district":"Yuen$Long","district_id":"36"}]}]}</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_qualified_pitches">no qualified pitches!</string>
    <string name="people_under_5">5 or below</string>
    <string name="people_6_10">6 to 10</string>
    <string name="people_11_20">11 to 20</string>
    <string name="people_above_20">Above 20</string>
    <string name="age_under_20">Age 20 or below</string>
    <string name="age_21_30">Age 21 – Age 30</string>
    <string name="age_31_40">Age 31 – Age 40</string>
    <string name="age_above_41">Above age 40</string>
    <string name="search_team">Search Team</string>
    <string name="join_match">Available Match</string>
    <string name="match_success">Confirmed Match</string>
    <string name="same_area_team">Teams in Same District</string>
    <string name="more">More</string>
    <string name="already_attention">Following Teams</string>
    <string name="my_match">my match</string>
    <string name="implemented_match">matched</string>
    <string name="not_mplement_match">The pending match</string>
    <string name="invited_match">invited match</string>
    <string name="trends">Recent News</string>
    <string name="focus">Suggestions</string>
    <string name="attack">Attack</string>
    <string name="defend">Defense</string>
    <string name="punctuality">Punctuality</string>
    <string name="ability">Technique</string>
    <string name="quality">Character</string>
    <string name="decide_to_play">Confirm Match</string>
    <string name="basic_information">Basic Information</string>
    <string name="finished_match">Completed Matches</string>
    <string name="yue_zhan">Match</string>
    <string name="invite_team_in">Invite team to join…</string>
    <string name="partake_this_match">This match</string>
    <string name="new_match">A new match</string>
    <string name="change_success">Change success</string>
    <string name="press_again_exit">Press again exit</string>
    <string name="same_district_teams">Same district teams</string>
    <string name="team_detail">Team Detail</string>
    <string name="team_average_age">Team average age</string>
    <string name="match_fail">Match failed</string>
    <string name="please_verify_your_account_first">Please verify your account and activate it in your email first</string>
    <string name="confirmation_pending">Wait to confirm</string>
    <string name="invited_already">Invited</string>
    <string name="accept_the_invitation">Accept</string>
    <string name="email_error">Please enter the correct email format!</string>
    <string name="password_error">Minimum password length requirement is six!</string>
    <string name="check_any_other_team_available">Check any other team available</string>
    <string name="still_have_time_to_wait_another_team_to_join">Still  have time to wait another team to join</string>
    <string name="notice_cancel_the_match">Cancel the match</string>
    <string name="there_is_not_available_matches">There is not available matches,please create a new match</string>
    <string name="cancel_the_invitation">Cancel the Invitation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="withdraw_success">Withdraw success</string>
    <string name="withdraw_failed">Withdraw failed</string>
    <string name="comfirm_success">Confirm success</string>
    <string name="confirm_failed">Confirm failed</string>
</resources>