<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_white"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:textSize="36px"
            android:textColor="@color/white"
            android:text="@string/choose_the_picture"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@drawable/shape_top_corner_blue"/>

        <Button
            android:id="@+id/btn_choose_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_shape_sharp_no_border"
            android:text="@string/local_album"
            android:textSize="36px" />

        <Button
            android:id="@+id/btn_choose_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_shape_sharp_no_border"
            android:text="@string/by_camera"
            android:textSize="36px" />

        <Button
            android:id="@+id/btn_choose_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_shape_sharp_no_border"
            android:layout_marginTop="5dp"
            android:text="@string/cancel"
            android:textSize="36px" />
    </LinearLayout>
</com.zhy.autolayout.AutoFrameLayout>