<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context="com.football.freekick.TestActivity"
    android:orientation="vertical">

    <TextView
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:textColor="@color/colorPrimary"
        android:textSize="100px"
        android:id="@+id/tv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_language"
        android:text="@string/testword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
