<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="480px"
        android:layout_height="320px"
        android:background="@drawable/shape_corner_white"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:textSize="36px"
            android:textColor="@color/white"
            android:text="@string/invite_team_in"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@drawable/shape_top_corner_blue"/>
        <TextView
            android:id="@+id/tv_partake_this_match"
            android:paddingTop="47px"
            android:paddingBottom="27px"
            android:paddingLeft="40px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_mplement_match"
            android:textColor="@color/blue_green"
            android:textSize="30px"/>

        <TextView
            android:id="@+id/tv_new_match"
            android:paddingLeft="40px"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30px"
            android:paddingRight="32px"
            android:paddingTop="27px"
            android:text="@string/new_match"
            android:textColor="@color/bottom_blue_bg"
            android:textSize="30px"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_icon_close"
        android:paddingBottom="30px"
        android:paddingLeft="30px"
        android:text="@string/icon_error"
        android:textSize="36px"
        android:textColor="@color/red"
        android:layout_gravity="right"
        android:paddingRight="16px"
        android:paddingTop="12px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</com.zhy.autolayout.AutoFrameLayout>