<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="580px"
        android:layout_height="384px"
        android:background="@drawable/shape_corner_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="88px"
            android:layout_marginBottom="28px"
            android:background="@drawable/shape_top_corner_blue"
            android:gravity="center"
            android:text="@string/pitch_size"
            android:textColor="@color/white"
            android:textSize="36px"/>

        <RadioGroup
            android:layout_marginTop="116px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48px"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_5"
                android:paddingBottom="20px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_radio_bg"
                android:drawablePadding="32px"
                android:text="@string/pitch_size_5"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_36"/>

            <RadioButton
                android:id="@+id/radio_7"
                android:paddingBottom="20px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_radio_bg"
                android:drawablePadding="32px"
                android:text="@string/pitch_size_7"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_36"/>

            <RadioButton
                android:id="@+id/radio_11"
                android:paddingBottom="10px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_radio_bg"
                android:drawablePadding="32px"
                android:text="@string/pitch_size_11"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_36"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:paddingBottom="30px"
            android:paddingLeft="100px"
            android:paddingRight="32px"
            android:paddingTop="30px"
            android:text="@string/confirm"
            android:textColor="@color/bottom_blue_bg"
            android:textSize="30px"/>
    </FrameLayout>
</com.zhy.autolayout.AutoFrameLayout>