<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_rectangle_white_gray_bg"
            android:gravity="right"
            android:paddingBottom="20px"
            android:paddingRight="10dp"
            android:text="@string/pitch_size_5"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_36"/>

        <TextView
            android:id="@+id/tv_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_rectangle_white_gray_bg"
            android:gravity="right"
            android:paddingBottom="20px"
            android:paddingRight="10dp"
            android:text="@string/pitch_size_7"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_36"/>

        <TextView
            android:id="@+id/tv_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_rectangle_white_gray_bg"
            android:gravity="right"
            android:paddingBottom="20px"
            android:paddingRight="10dp"
            android:text="@string/pitch_size_11"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_36"/>
    </LinearLayout>
</com.zhy.autolayout.AutoFrameLayout>