<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="480px"
        android:layout_height="320px"
        android:background="@drawable/shape_corner_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:gravity="center"
            android:textSize="36px"
            android:textColor="@color/white"
            android:text="@string/cancel_the_invitation"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@drawable/shape_top_corner_blue"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:background="@drawable/selector_rectangle_white_gray_bg"
                android:clickable="true"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/tv_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/yes"
                android:textColor="@color/blue_green"
                android:textSize="30px"/>

            <TextView
                android:background="@drawable/selector_rectangle_white_gray_bg"
                android:clickable="true"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/tv_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/no"
                android:textColor="@color/blue_green"
                android:textSize="30px"/>
        </LinearLayout>


    </LinearLayout>
</com.zhy.autolayout.AutoFrameLayout>